--- a/apps/web/src/routes/PostDetail/PostDetail.module.scss
+++ b/apps/web/src/routes/PostDetail/PostDetail.module.scss
@@ -1,5 +1,5 @@
 .post {
-  background-color: white;
+  background-color: hsl(var(--background));
   overflow: hidden;
   max-width: 960px;
   min-width: 350px;
